<resources>
    <string name="app_name">RU Pizza</string>
    <string name="chicago_pizza">Chicago Pizza</string>
    <string name="ny_pizza">NY Pizza</string>
    <string name="store_orders">Store Orders</string>
    <string name="cart">Cart</string>
    <string name="crust">Crust:\u0020</string>
    <string name="chicago_style_pizza">Chicago Style Pizza</string>
    <string name="new_york_style_pizza">New York Style Pizza</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="pizza_price">Pizza Price: $ </string>
    <string name="add_to_order">Add to Order</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="order_number">Order Number:</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="zero_price">0.00</string>
    <string name="sales_tax">Sales Tax: $</string>
    <string name="order_total">Order Total: $</string>
    <string name="place_order">Place Order</string>
    <string name="order">Order</string>
    <string name="order_total_tax_included">Order Total (tax included): $</string>
    <string name="topping">topping</string>
    <string-array name="pizza_types">
        <item>Build Your Own</item>
        <item>Deluxe</item>
        <item>BBQ Chicken</item>
        <item>Meatzza</item>
    </string-array>
</resources>